config/overlay/single-cluster/webhook-admission/admission_configurations_service_patch.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
  - clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /mutate-terminal
      url: null
    name: mutating-create-update-terminal.gardener.cloud
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - clientConfig:
      service:
        name: webhook-service
        namespace: system
        path: /validate-terminal
      url: null
    name: validating-create-update-terminal.gardener.cloud
